# htmx_todo_app

./: Cargo.toml
migrations/: 20240528073002_initial_migration.sql
src/: main.rs  models.rs  routes.rs  templates.rs
templates/: todo.html  todo_list.html
